# tardus

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  SECURITY.md  deny.toml  rust-toolchain.toml
.cargo/: audit.toml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  crypto_review.md  feature_request.md
.github/profile/: README.md
.github/workflows/: README.md  audit.yml  cross-language-compat.yml  gui-build.yml  hsm-tests.yml  release.yml  spec-build.yml  supply-chain.yml  ts-sdk-tests.yml  workspace-tests.yml
audit/: ASSUMPTIONS.md  FINDINGS_TEMPLATE.md  ONBOARDING.md  README.md  REPRODUCE.md  SCOPE.md  THREAT_MODEL.md
crates/tardus-cli/: Cargo.toml
crates/tardus-cli/src/: main.rs
crates/tardus-cli/src/commands/: coin.rs  demo.rs  devnet.rs  invoice.rs  mod.rs
crates/tardus-client/: Cargo.toml
crates/tardus-client/src/: backup.rs  coin_store.rs  error.rs  invoice.rs  issue.rs  lib.rs
crates/tardus-client/tests/: full_lifecycle.rs  invoice_coin_store.rs
crates/tardus-core/: Cargo.toml
crates/tardus-core/src/: blind.rs  error.rs  group.rs  hash.rs  lib.rs  signature.rs
crates/tardus-core/tests/: blind.rs  perf.rs  schnorr.rs
crates/tardus-mint/: Cargo.toml
crates/tardus-mint/src/: dkg.rs  error.rs  lib.rs  rotation.rs  sign.rs  state.rs  transcript.rs  vss.rs
crates/tardus-mint/tests/: dkg.rs  rotation.rs  sign.rs  vss.rs
crates/tardus-program/: Cargo.toml
crates/tardus-program/src/: ed25519_verifier.rs  entrypoint.rs  error.rs  instruction.rs  lib.rs  pda.rs  processor.rs  sbf_processor.rs  state.rs
crates/tardus-program/tests/: devnet_e2e.rs  processor.rs  sbf_integration.rs
crates/tardus-refresh/: Cargo.toml
crates/tardus-refresh/src/: coin.rs  derivation.rs  error.rs  lib.rs  refresh.rs
crates/tardus-refresh/tests/: coin_derivation.rs  refresh.rs
crates/tardus-relay/: Cargo.toml
crates/tardus-relay/src/: api.rs  error.rs  inbox.rs  lib.rs  main.rs  state.rs
crates/tardus-relay/tests/: inbox_e2e.rs  persistence.rs  tls.rs
crates/tardus-validator/: Cargo.toml
crates/tardus-validator/src/: api.rs  dkg_sessions.rs  error.rs  lib.rs  main.rs  pkcs11_store.rs  refresh_sessions.rs  reshare_sessions.rs  share_store.rs  sign_sessions.rs  state.rs  storage.rs  transparency_log.rs
crates/tardus-validator/tests/: dkg_e2e.rs  hsm_pkcs11.rs  http_api.rs  mtls.rs  nullifier_guard.rs  observability.rs  refresh_e2e.rs  reshare_e2e.rs  threshold_sign_e2e.rs  tls.rs  transparency.rs
crates/tardus-wallet/: Cargo.toml
crates/tardus-wallet-gui/: Cargo.toml  SCREENSHOTS.md
crates/tardus-wallet-gui/src/: config.rs  main.rs  runtime.rs  theme.rs
crates/tardus-wallet/examples/: cross_language_vectors.rs  demo_private_transfer.rs
crates/tardus-wallet/src/: client_pool.rs  error.rs  issue.rs  keysets.rs  lib.rs  mnemonic.rs  refresh.rs  sealed_box.rs  wallet_db.rs
crates/tardus-wallet/tests/: full_stack_p2p.rs  issue_e2e.rs  refresh_e2e.rs
deploy/: INFRA_REPO.md
deploy/wallet-release/: .gitignore  SIGNING.md
paper/: Makefile  PAPER.tex  refs.bib
paper/sections/: abstract.tex  conclusion.tex  evaluation.tex  introduction.tex  preliminaries.tex  protocol.tex  related-work.tex  security.tex
proofs/: blindness.ec  double_spend.ec  state_integrity.ec  unforgeability.ec
research/: PRODUCTION_LESSONS.md
research/cashu/: findings.md
research/taler/: findings.md
security/: VULNERABILITY_REPORT.md
spec/: Makefile  SPEC.tex  refs.bib
spec/easycrypt/: README.md  blind.ec  cut_choose.ec  schnorr.ec  sealed_box.ec
spec/sections/: 01-introduction.tex  02-crypto-primitives.tex  03-protocol-mint.tex  04-protocol-refresh.tex  05-onchain-program.tex  06-wallet.tex  07-security.tex  08-failure-modes.tex  09-relay.tex  A-reference-vectors.tex
ts-sdk/: package-lock.json  package.json  tsconfig.json
ts-sdk/src/: index.ts  invoice.ts  mnemonic-rust-compat.ts  mnemonic.ts  montgomery.ts  sealed-box-rust-compat.ts  sealed-box.ts
ts-sdk/test/: invoice.test.ts  mnemonic.test.ts  rust-compat.test.ts  rust-cross-language.test.ts  rust-fixture.test.ts  sealed-box.test.ts
ts-sdk/test/fixtures/: .gitkeep  rust-vectors.json
web/: SECURITY.md  index.html  package-lock.json  package.json  tsconfig.app.json  tsconfig.node.json  vite.config.ts
web/src/: App.tsx  main.tsx
web/src/components/: ConnectButton.tsx  Footer.tsx  Header.tsx  PrivateTransfer.tsx  Roadmap.tsx
web/src/lib/: coin.ts  identity.ts  node-crypto-shim.ts  relay.ts  tardus-program.ts  wallet-provider.tsx
web/src/styles/: global.css
