[workspace]
resolver = "2"
members = ["crates/*"]

[workspace.package]
version       = "0.1.0"
edition       = "2021"
rust-version  = "1.85"
authors       = ["nzengi"]
license-file  = "LICENSE"
publish       = false

[workspace.lints.rust]
unsafe_code = "deny"

[workspace.lints.clippy]
pedantic = { level = "warn", priority = -1 }
all      = { level = "warn", priority = -1 }

[profile.release]
opt-level       = 3
lto             = "fat"
codegen-units   = 1
panic           = "abort"
debug           = "line-tables-only"
strip           = false

[profile.dev]
opt-level = 0
debug     = "full"

[profile.bench]
opt-level     = 3
lto           = "thin"
codegen-units = 1
debug         = "line-tables-only"
