[package]
name              = "tardus-client"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license-file.workspace = true
publish.workspace = true
description       = "TARDUS off-chain client SDK: wallet primitives, invoice URI, refresh session orchestration."

[dependencies]
tardus-core      = { path = "../tardus-core" }
tardus-mint      = { path = "../tardus-mint" }
tardus-refresh   = { path = "../tardus-refresh" }
borsh            = { version = "1", default-features = false, features = ["derive"] }
sha2             = { version = "0.10", default-features = false }
hkdf             = { version = "0.12", default-features = false }
chacha20poly1305 = { version = "0.10", default-features = false, features = ["alloc"] }
rand_core        = { version = "0.6", default-features = false }
zeroize          = { version = "1", default-features = false, features = ["derive"] }

[dev-dependencies]
rand        = "0.8"
rand_chacha = "0.3"
hex         = "0.4"

[lints]
workspace = true
