[package]
name              = "tardus-program"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license-file.workspace = true
publish.workspace = true
description       = "TARDUS on-chain Solana program (native Rust, Anchor-free)."

[lib]
crate-type = ["cdylib", "rlib"]

[features]
# When set, suppresses the BPF entrypoint so the library can be
# linked from off-chain code (CLI tests, simulator, etc.).
no-entrypoint = []

[dependencies]
tardus-core    = { path = "../tardus-core" }
solana-program = "2"
borsh          = { version = "1", default-features = false, features = ["derive"] }
sha2           = { version = "0.10", default-features = false }

[dev-dependencies]
rand                = "0.8"
rand_chacha         = "0.3"
hex                 = "0.4"
solana-program-test = "2"
solana-sdk          = "2"
solana-client       = "2"
tokio               = { version = "1", features = ["rt", "macros"] }

[lints]
workspace = true
