[package]
name              = "tardus-relay"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license-file.workspace = true
publish.workspace = true
description       = "TARDUS encrypted relay daemon: TTL-bound coin-blob inbox, anonymous user-to-user coin delivery."

[[bin]]
name = "tardus-relayd"
path = "src/main.rs"

[dependencies]
axum              = "0.7"
axum-server       = { version = "0.7", features = ["tls-rustls"] }
rustls            = { version = "0.23", default-features = false, features = ["ring", "logging", "std", "tls12"] }
tokio             = { version = "1", features = ["rt-multi-thread", "macros", "signal", "sync"] }
tower             = "0.5"
tower-http        = { version = "0.6", features = ["trace"] }
tracing           = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
serde             = { version = "1", features = ["derive"] }
serde_json        = "1"
clap              = { version = "4", features = ["derive", "env"] }
anyhow            = "1"
thiserror         = "1"
hex               = "0.4"
rand              = "0.8"
rusqlite          = { version = "0.31", features = ["bundled"] }

[dev-dependencies]
reqwest           = { version = "0.12", default-features = false, features = ["rustls-tls", "rustls-tls-native-roots", "blocking", "json"] }
tempfile          = "3"
rcgen             = "0.13"

[lints]
workspace = true
