[package]
name              = "tardus-wallet-gui"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license-file.workspace = true
publish.workspace = true
description       = "TARDUS user wallet — desktop GUI (egui/eframe + tokio runtime). v1 scope: mnemonic, balance, recv identity, invoice viewer, keyset CRUD, pay, receive, refresh."

[[bin]]
name = "tardus-wallet-gui"
path = "src/main.rs"

[dependencies]
tardus-client   = { path = "../tardus-client" }
tardus-core     = { path = "../tardus-core" }
tardus-mint     = { path = "../tardus-mint" }
tardus-refresh  = { path = "../tardus-refresh" }
tardus-wallet   = { path = "../tardus-wallet" }
tardus-program  = { path = "../tardus-program", features = ["no-entrypoint"] }
solana-client   = "2"
solana-sdk      = "2"
borsh           = "1"
eframe          = { version = "0.29", default-features = false, features = ["default_fonts", "glow", "persistence", "wayland", "x11"] }
egui            = "0.29"
tokio           = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time", "io-util"] }
serde           = { version = "1", features = ["derive"] }
serde_json      = "1"
toml            = "0.8"
hex             = "0.4"
anyhow          = "1"
thiserror       = "1"
tracing         = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
zeroize         = { version = "1", features = ["derive"] }
directories     = "5"
reqwest         = { version = "0.12", default-features = false, features = ["rustls-tls", "rustls-tls-native-roots", "json"] }
rand            = "0.8"

[dev-dependencies]
tempfile = "3"
serde    = { version = "1", features = ["derive"] }
reqwest  = { version = "0.12", default-features = false, features = ["rustls-tls", "rustls-tls-native-roots", "json", "blocking"] }

[lints]
workspace = true
